# mapreduce-lite

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
doc/: install.md
src/base/: CMakeLists.txt  class_register.h  class_register_test.cc  class_register_test_helper.cc  class_register_test_helper.h  common.h  cvector.h  cvector_test.cc  logging.cc  logging.h  random.cc  random.h  scoped_ptr.h  stdint_msvc.h  stl-util.h  stl-util_test.cc  stream_wrapper.cc  stream_wrapper.h  varint32.cc  varint32.h  varint32_test.cc
src/hash/: CMakeLists.txt  md5_hash.cc  md5_hash.h  md5_hash_test.cc  simple_hash.cc  simple_hash.h
src/mapreduce_lite/: CMakeLists.txt  communicator.h  design.txt  flags.cc  flags.h  mapreduce_lite.cc  mapreduce_lite.h  mapreduce_main.cc  protofile.cc  protofile.h  protofile.proto  protofile_test.cc  reader.cc  reader.h  reader_test.cc  registerer_test.cc  signaling_queue.cc  signaling_queue.h  signaling_queue_test.cc  socket_communicator.cc  socket_communicator.h  socket_communicator_test.cc  tcp_socket.cc  tcp_socket.h  tcp_socket_test.cc  utils.h  utils_test.cc
src/mapreduce_lite/demo/: CMakeLists.txt  Makefile  Makefile.rules  README  batch_test.sh  increamental_test.sh  mrlite_simple_example.sh  wordcount.cc  wordcount_batch_reduction_mode.sh  wordcount_incremental_reduction_mode.sh  wordcount_run_locally.sh
src/mapreduce_lite/demo/testdata/: text-00000-of-00002  text-00001-of-00002
src/mapreduce_lite/scheduler/: README  mrlite.py  mrlite_options.py  mrlite_options_test.py  util.py  worker.py
src/sorted_buffer/: CMakeLists.txt  memory_allocator.cc  memory_allocator.h  memory_allocator_test.cc  memory_piece.cc  memory_piece.h  memory_piece_io_test.cc  memory_piece_less_than_test.cc  memory_piece_test.cc  sorted_buffer.cc  sorted_buffer.h  sorted_buffer_iterator.cc  sorted_buffer_iterator.h  sorted_buffer_iterator_test.cc  sorted_buffer_regression_test.cc  sorted_buffer_test.cc
src/strutil/: CMakeLists.txt  Makefile  join_strings.h  join_strings_test.cc  split_string.cc  split_string.h  split_string_test.cc  strcodec.cc  strcodec.h  strcodec_test.cc  stringprintf.cc  stringprintf.h  stringprintf_test.cc
src/system/: CMakeLists.txt  condition_variable.cc  condition_variable.h  condition_variable_test.cc  filepattern.cc  filepattern.h  filepattern_test.cc  mutex.h  mutex_test.cc  scoped_locker.h
